fixed menu link spacing

--- a/engage/engage_style.css
+++ b/engage/engage_style.css
@@ -35,7 +35,7 @@ html, body {
 }
 
 .menu-links {
-    padding: 5% 0 0 45%;
+    padding: 5% 0 0 52.5%;
     font-family: 'Source Sans Pro', sans-serif;
     font-size: 25px;
     font-weight: bold;
@@ -391,7 +391,7 @@ div.footer {
     }
     
     .menu-links {
-        padding: 5% 0 0 45%;
+        padding: 5% 0 0 44%;
         font-family: 'Source Sans Pro', sans-serif;
         font-size: 25px;
         font-weight: bold;
